--- a/src/style.css
+++ b/src/style.css
@@ -153,12 +153,25 @@ a:hover {
 /* Description container with vertical line */
 .description-container {
   display: flex;
-  align-items: stretch; /* Changed from flex-start to stretch */
+  align-items: flex-start; /* Changed from flex-start to stretch */
   margin-top: 1.5rem;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   position: relative; /* Add this */
+}
+
+@media (max-width: 768px) {
+  .description-container {
+    margin-top: 3rem;
+    margin-left: 30px;
+  }
+}
+
+@media (max-width: 426px) {
+  .description-container {
+    margin-left: 20px;
+  }
 }
 
 /* Animated vertical line */
@@ -648,10 +661,10 @@ svg path {
 /* Contact Section Styling */
 .contact-section {
   padding: 8rem 2rem 6rem;
-  background: linear-gradient(135deg, 
-    rgba(12, 12, 12, 0.95) 0%, 
+  background: linear-gradient(to top, 
+    rgba(40, 40, 55, 0.95) 0%, 
     rgba(20, 20, 30, 0.95) 50%, 
-    rgba(12, 12, 12, 0.95) 100%);
+    rgba(12, 12, 12, 0.95) 90%);
   position: relative;
 }
 
@@ -667,8 +680,6 @@ svg path {
   gap: 30px;
 }
 
-
-
 .contact-text-and-socials {
   min-height: 100%;
   display: flex;
@@ -677,6 +688,10 @@ svg path {
 }
 
 @media (max-width: 768px)  {
+  .contact-container {
+    margin: 0 2rem;
+  }
+
   .contact-content {
     flex-direction: column;
   }
@@ -795,22 +810,22 @@ svg path {
   color: #cccccc;
 }
 
-
-
 /* Contact Form Styling */
 .contact-form-container {
   flex: 1;
-  background: rgba(255, 255, 255, 0.03);
+  margin-left: 20px;
+  /* background: rgba(255, 255, 255, 0.03);
   padding: 2rem;
   border-radius: 1rem;
   border: 1px solid rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px); */
 }
+
 
 .contact-form {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 2.5rem;
 }
 
 .form-group {
@@ -829,25 +844,22 @@ svg path {
 .form-group input,
 .form-group textarea {
   padding: 1rem;
-  background: rgba(255, 255, 255, 0.05);
+  background: transparent;
   border: 1px solid rgba(255, 255, 255, 0.2);
-  border-radius: 0.5rem;
+  border-radius: 2px;
   color: var(--text-color);
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-family: inherit;
   transition: all 0.3s ease;
-  resize: vertical;
 }
 
 .form-group input:focus,
 .form-group textarea:focus {
   outline: none;
   border-color: var(--primary-accent-color);
-  background: rgba(255, 255, 255, 0.08);
+  background: transparent;
   box-shadow: 0 0 0 2px rgba(255, 0, 255, 0.2);
 }
-
-
 
 .submit-btn {
   display: flex;
@@ -895,13 +907,12 @@ svg path {
   }
   
   .contact-form-container {
-    padding: 1.5rem;
+    margin-left: 0;
   }
   
   .contact-info {
     position: static; /* Remove sticky positioning on smaller screens */
     align-self: center; /* Center align on smaller screens */
-    margin-bottom: 1rem; /* Add some space below */
   }
   
   .contact-info h3 {
